<resources>
    <string name="app_name">SoftUserClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_here">Enter Email Here</string>
    <string name="enter_password_here">Enter Password Here</string>
    <string name="want_to_sign_up">Want to sign Up?</string>
    <string name="log_in">Log In</string>
    <string name="enter_full_name_here">Enter Full Name Here</string>
    <string name="enter_age_here">Enter Age Here</string>
    <string name="add_student">Add Student</string>
</resources>