<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/coventryImg"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="130dp"
        app:srcCompat="@drawable/download"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:height="50dp"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:hint="@string/enter_email_here" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textPassword"
        android:height="50dp"
        android:gravity="center"
        android:hint="@string/enter_password_here" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/btnIdlogin"
        android:gravity="center"
        android:background="#2A363B"
        android:width="290dp"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:layout_marginStart="55dp"
        />
    <TextView
        android:id="@+id/etSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_to_sign_up"
        android:layout_marginTop="15dp"
        android:layout_marginStart="100dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="#2A363B"
        />
</LinearLayout>