<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:height="50dp"
            android:gravity="center"
            android:hint="@string/enter_full_name_here" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="-96dp"
            android:height="50dp"
            android:gravity="center"
            android:hint="@string/enter_age_here"
            android:inputType="number" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="122dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="-96dp"
            android:height="50dp"
            android:gravity="center"
            android:hint="Enter Address Here"
            android:inputType="text" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="150dp">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="  Male"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="   Female"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radioOther"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="   Other"
                android:textSize="20sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/etImageurl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="-96dp"
            android:height="50dp"
            android:gravity="center"
            android:hint="Enter Image Url Here"
            android:inputType="text" />

        <Button
            android:id="@+id/btnAddstdnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:text="@string/add_student" />


    </LinearLayout>
</ScrollView>